--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,7 @@ body, html{
 }
 
 .d-none{
-	display: none;
+	display: none !important;
 }
 
 .mm-btn, .mm-btn-second, .mm-btn-exhibit{
@@ -180,4 +180,42 @@ body, html{
   background-color: #b1b811;
   border-radius: 20px;
   border: 1px solid  #b1b811;
+}
+
+
+.dashboard-item{
+	background: #f7f7f7;
+	box-shadow: 0px 0px 15px rgba(246,248,0, 0.7);
+	border-radius: 2px;
+	height: 50px;
+	padding: 10px 20px;
+	margin: 40px auto;
+}
+
+.dashboard-item .item-number, .dashboard-item .item-value{
+	font-size: 21px;
+	font-weight: 600;
+	color: #333;
+}
+
+.item-score{
+	color: #b1b811;
+	margin-left: 10px;
+}
+
+.own-score{
+	background-color: #b1b811;
+}
+
+.own-score .item-number, .own-score .item-value, .own-score .item-score{
+	color: #f7f7f7
+}
+
+
+@media (max-width: 689px) {
+	#img-holder{
+		max-width: 95%;
+		height: auto;
+	}
+
 }
